fixed bug on contact page and fixed image alignment on portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ input, textarea {
 .box-set {
     position: relative;
     height: 750px;
-    width: 600px;
+    width: 550px;
 }
 
 .box {
